extract github config from code to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=8887
+github.client.id=0f28eaacb35b275b70e3
+github.client.secret=9aab715c61a5dbcd1801dc4f8445d312351f0481
+github.redirect.uri=http://localhost:8887/callback
