add h2 database & save user message to db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 server.port=8887
 github.client.id=0f28eaacb35b275b70e3
-github.client.secret=9aab715c61a5dbcd1801dc4f8445d312351f0481
+github.client.secret=1794b3d72b7692425c73ea7586e21dbeb45401f8
 github.redirect.uri=http://localhost:8887/callback
+spring.datasource.url=jdbc:h2:~/community2
+spring.datasource.username=admin
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.h2.Driver
