--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,6 @@ spring.datasource.username=admin
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.h2.Driver
 mybatis.configuration.map-underscore-to-camel-case=true
-
+mybatis.type-aliases-package=com.apple.shen.community.model
+mybatis.mapper-locations=classpath:mapper/*.xml
 
